--- a/ClientIRC/logindialog.ui
+++ b/ClientIRC/logindialog.ui
@@ -2,12 +2,15 @@
 <ui version="4.0">
  <class>LoginDialog</class>
  <widget class="QWidget" name="LoginDialog">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>146</height>
+    <height>140</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -39,6 +42,9 @@
     </item>
     <item row="0" column="1">
      <widget class="QLineEdit" name="lineEdit_username">
+      <property name="text">
+       <string>admin</string>
+      </property>
       <property name="maxLength">
        <number>30</number>
       </property>
@@ -49,6 +55,9 @@
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="lineEdit_password">
+      <property name="text">
+       <string>admin</string>
+      </property>
       <property name="maxLength">
        <number>30</number>
       </property>
@@ -75,14 +84,14 @@
     <item>
      <widget class="QPushButton" name="button_quit">
       <property name="text">
-       <string>Login</string>
+       <string>Quit</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="button_login">
       <property name="text">
-       <string>Quit</string>
+       <string>Login</string>
       </property>
      </widget>
     </item>
