--- a/ClientIRC/mainclientwindow.ui
+++ b/ClientIRC/mainclientwindow.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>670</width>
-    <height>392</height>
+    <width>751</width>
+    <height>492</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -28,8 +28,8 @@
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>475</width>
-      <height>255</height>
+      <width>565</width>
+      <height>381</height>
      </rect>
     </property>
     <property name="tabsClosable">
@@ -38,7 +38,7 @@
     <property name="movable">
      <bool>true</bool>
     </property>
-    <widget class="QWidget" name="chatWindowPage1" native="true">
+    <widget class="QWidget" name="chatWindowPage1">
      <attribute name="title">
       <string/>
      </attribute>
@@ -47,13 +47,35 @@
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>300</y>
-      <width>471</width>
+      <x>10</x>
+      <y>410</y>
+      <width>731</width>
       <height>31</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="label_userName">
+       <property name="minimumSize">
+        <size>
+         <width>150</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>userName</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+       <property name="wordWrap">
+        <bool>false</bool>
+       </property>
+       <property name="buddy">
+        <cstring></cstring>
+       </property>
+      </widget>
+     </item>
      <item>
       <widget class="QLineEdit" name="lineEdit_message"/>
      </item>
@@ -69,31 +91,69 @@
    <widget class="QListView" name="listView_channelUsers">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>20</y>
+      <x>580</x>
+      <y>50</y>
       <width>161</width>
-      <height>251</height>
+      <height>351</height>
      </rect>
     </property>
    </widget>
-   <zorder>chatWindow</zorder>
-   <zorder>horizontalLayoutWidget</zorder>
-   <zorder>listView_channelUsers</zorder>
-   <zorder>lineEdit_message</zorder>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>20</y>
+      <width>161</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Active users:</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>670</width>
+     <width>751</width>
      <height>25</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuOptions">
+    <property name="title">
+     <string>Options</string>
+    </property>
+    <addaction name="actionDisconnect"/>
+   </widget>
+   <addaction name="menuOptions"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionDisconnect">
+   <property name="text">
+    <string>Close</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>lineEdit_message</sender>
+   <signal>returnPressed()</signal>
+   <receiver>button_send</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>407</x>
+     <y>450</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>697</x>
+     <y>450</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
