--- a/ClientIRC/mainclientwindow.ui
+++ b/ClientIRC/mainclientwindow.ui
@@ -33,7 +33,7 @@
      </rect>
     </property>
     <property name="tabsClosable">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="movable">
      <bool>true</bool>
@@ -125,6 +125,7 @@
     <property name="title">
      <string>Options</string>
     </property>
+    <addaction name="actionConnect_to_new_channel"/>
     <addaction name="actionDisconnect"/>
    </widget>
    <addaction name="menuOptions"/>
@@ -133,6 +134,11 @@
   <action name="actionDisconnect">
    <property name="text">
     <string>Close</string>
+   </property>
+  </action>
+  <action name="actionConnect_to_new_channel">
+   <property name="text">
+    <string>Connect to new  channel</string>
    </property>
   </action>
  </widget>
