--- a/ClientIRC/stringpicker.ui
+++ b/ClientIRC/stringpicker.ui
@@ -44,7 +44,7 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>131</width>
+     <width>381</width>
      <height>17</height>
     </rect>
    </property>
@@ -54,5 +54,22 @@
   </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>lineEdit_value</sender>
+   <signal>returnPressed()</signal>
+   <receiver>button_pickStr</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>200</x>
+     <y>53</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>339</x>
+     <y>83</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
